--- a/client-load-balancer-service.yaml
+++ b/client-load-balancer-service.yaml
@@ -3,9 +3,9 @@ kind: Service
 metadata:
   labels:
     service-label-key: service-label-value 
-  name: service-name
+  name: service-name-loadbalancer
 spec:
-  type: ClusterIP
+  type: LoadBalancer
   ports:
   - name: service-port-name
     port: 80
