--- a/server.yaml
+++ b/server.yaml
@@ -1,57 +1,46 @@
-apiVersion: v1
-kind: Service
-metadata:
-  name: reload-app-server-service
-  labels:
-    app: reload-app-server
-spec:
-  type: NodePort
-  ports:
-  - port: 3000
-    targetPort: 3000
-  selector:
-    app: reload-app-server
 ---
 apiVersion: apps/v1
 kind: Deployment
-metadata: 
-  name: reload-app-server-deployment
+metadata:
+  name: reload-server
 spec:
-  strategy:
-    type: RollingUpdate
-    rollingUpdate:
-      maxUnavailable: 0
-      maxSurge: 1
-  selector: 
-    matchLabels: 
-      app: reload-app-server
-  replicas: 3
+  replicas: 1
+  selector:
+    matchLabels:
+      app: reload-server
   template:
     metadata:
       labels:
-        app: reload-app-server
+        app: reload-server
     spec:
+      imagePullSecrets:
+        - name: aws-registry  
+      nodeSelector:
+        "beta.kubernetes.io/os": linux
       containers:
-      - name: reload-app-server
-        image: andresnboza/reload-app-server
-        env:
-        - name: MONGO_URI
-          valueFrom:
-            secretKeyRef:
-              name: mongodb-secret
-              key: MONGO_URI
-        ports:
-        - containerPort: 3000
-        livenessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 3
-          periodSeconds: 3  
-        readinessProbe:
-          httpGet:
-            path: /
-            port: 3000
-          initialDelaySeconds: 5
-          periodSeconds: 5
-          successThreshold: 1 
+        - name: reload-server
+          image: andresnboza/reload-server
+          resources:
+            limits:
+              cpu: 250m
+              memory: 512Mi
+            requests:
+              cpu: 250m
+              memory: 512Mi
+          ports:
+            - containerPort: 3000
+              name: reload-server        
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: reload-server
+spec:
+  type: ClusterIP
+  ports:
+    - protocol: "TCP"
+      port: 80
+      targetPort: 3000
+  selector:
+    app: reload-server
+
