--- a/client-service.yaml
+++ b/client-service.yaml
@@ -2,13 +2,13 @@ apiVersion: v1
 kind: Service
 metadata:
   labels:
-    service-label-key: service-label-value 
-  name: service-name
+    service-label-key: reload-app-client-service 
+  name: reload-app-client-service
 spec:
   type: ClusterIP
   ports:
-  - name: service-port-name
+  - name: reload-app-client-port
     port: 80
     protocol: TCP
   selector:
-    deployment-label-key: deployment-label-value
+    app: reload-app-client
