--- a/server-service.yaml
+++ b/server-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: reload-app-server
+  name: reload-app-server-service
   labels:
     app: reload-app-server
 spec:
