--- a/ingress.yml
+++ b/ingress.yml
@@ -4,6 +4,11 @@ metadata:
   name: reload-app-client-ingress
   namespace: kube-system
 spec:
+  defaultBackend:
+      resource:
+        apiGroup: k8s.example.com
+        kind: StorageBucket
+        name: static-assets
   ingressClassName: nginx
   rules:
     - host: reloadapp.cr.146.190.0.144.nip.io
