--- a/server.yaml
+++ b/server.yaml
@@ -1,46 +1,38 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: reload-server
+  name: reload-app-server
 spec:
-  replicas: 1
+  replicas: 3
   selector:
     matchLabels:
-      app: reload-server
+      app: reload-app-server
   template:
     metadata:
       labels:
-        app: reload-server
+        app: reload-app-server
     spec:
-      imagePullSecrets:
-        - name: aws-registry  
-      nodeSelector:
-        "beta.kubernetes.io/os": linux
       containers:
-        - name: reload-server
-          image: andresnboza/reload-server
-          resources:
-            limits:
-              cpu: 250m
-              memory: 512Mi
-            requests:
-              cpu: 250m
-              memory: 512Mi
-          ports:
-            - containerPort: 3000
-              name: reload-server        
+      - name: reload-app-server
+        image: andresnboza/reload-app-server
+        ports:
+          - containerPort: 3000
+        env:
+        - name: MONGO_URI
+          valueFrom:
+            secretKeyRef:
+              name: mongodb-secret
+              key: MONGO_URI
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: reload-server
+  name: reload-app-server-service
+  labels:
+    app: reload-app-server
 spec:
-  type: ClusterIP
   ports:
-    - protocol: "TCP"
-      port: 80
-      targetPort: 3000
+    - port: 3000
   selector:
-    app: reload-server
-
+    app: reload-app-server
+  clusterIP: None
