--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -10,6 +10,10 @@ server {
   listen 80;
 
   location /server {
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+    proxy_set_header Host $http_host;
+    proxy_redirect off;
     proxy_pass http://server;
   }
 
