--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -9,11 +9,12 @@ upstream server {
 server {
   listen 80;
 
-  location /server {
+  location /api2 {
     proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Host $http_host;
     proxy_redirect off;
+    rewrite /api2/(.*) /$1 break;
     proxy_pass http://server;
   }
 
